--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: antix-cc-full-antix
+Source: antix-cc-base-antix
 Section: system
 Priority: optional
 Maintainer: anticapitalista <antiX@operamail.com>
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 9.20120115)
 Standards-Version: 3.9.4
 Homepage: http://antix.mepis.org
 
-Package: antix-cc-full-antix
+Package: antix-cc-base-antix
 Architecture: all
-Depends: gtkdialog, yad, geany, leafpad, lxappearance, sysv-rc-conf, rxvt-unicode, wallpaper-antix, user-management-antix, keyboard-cc-antix, arandr, gparted, partimage, grsync, mountbox-antix, live-usb-gui-antix, inxi-gui-antix, mouse-cc-antix, alsa-utils, synaptic, set-screen-blank-antix   
-Description: Control centre for antiX-full.
+Depends: gtkdialog, yad, geany, leafpad, ktsuss, lxappearance, sysv-rc-conf, rxvt-unicode, wallpaper-antix, user-management-antix, keyboard-cc-antix, arandr, gparted, partimage, grsync, mountbox-antix, live-usb-gui-antix, inxi-gui-antix, mouse-cc-antix, alsa-utils, set-screen-blank-antix   
+Description: Control centre for antiX-base.
