--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: antix-cc-antix
+Source: control-centre-antix
 Section: system
 Priority: optional
 Maintainer: anticapitalista <antix@operamail.com>
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 9.20120115)
 Standards-Version: 3.9.4
 Homepage: http://antix.mepis.org
 
-Package: antix-cc-antix
+Package: control-centre-antix
 Architecture: all
 Depends: gtkdialog, yad, geany, leafpad, lxappearance, sysv-rc-conf, rxvt-unicode, wallpaper-antix, user-management-antix, keyboard-cc-antix, arandr, gparted, partimage, grsync, mountbox-antix, live-usb-gui-antix, inxi-gui-antix, ds-mouse-antix, alsa-utils, set-screen-blank-antix   
 Conflicts: mouse-cc-antix, antix-cc-full-antix, antix-cc-base-antix 
